GCA-141 Implement JWT-based authentication for login - Update tests